@@ -1,16 +1,10 @@
-<?xml version = '1.0'?>
-<update-bundle version="1.0"
-               xmlns="http://xmlns.oracle.com/jdeveloper/updatebundle"
-               xmlns:u="http://xmlns.oracle.com/jdeveloper/update">
-  <u:update id="net.sourceforge.pmd.jdeveloper">
-    <u:name>PMD JDeveloper Extension</u:name>
-    <u:version>1.9</u:version>
-    <u:author>Torsten Kleiber</u:author>
-    <u:author-url>http://pmd.sourceforge.net/</u:author-url>
-    <u:description>Provides integrated support for PMD 4.0 in JDeveloper 10.1.3 - 11.1.1.</u:description>
-    <u:requirements>
-      <u:requires-extension id="oracle.jdeveloper" minVersion="10.1.3"
-                            maxVersion="11.1.1"/>
-    </u:requirements>
-  </u:update>
+<?xml version = '1.0' encoding = 'UTF-8'?>
+<update-bundle version="1.0" xmlns="http://xmlns.oracle.com/jdeveloper/updatebundle">
+  <update id="net.sourceforge.pmd.jdeveloper" xmlns="http://xmlns.oracle.com/jdeveloper/update">
+    <name>PMD JDeveloper Extension</name>
+    <version>1.9.0.0.1</version>
+    <author>Torsten Kleiber</author>
+    <author-url>http://pmd.sourceforge.net/</author-url>
+    <description>Provides integrated support for PMD 4.0 in JDeveloper 11g Technology Preview 2.</description>
+  </update>
 </update-bundle>
