@@ -6,7 +6,21 @@
     <u:version>1.9</u:version>
     <u:author>Torsten Kleiber</u:author>
     <u:author-url>http://pmd.sourceforge.net</u:author-url>
-    <u:description>Provides integrated support for PMD 4.0 in JDeveloper 10.1.3 - 11.1.1.</u:description>
+    <u:description>Provides integrated support for PMD 4.0 in JDeveloper 10.1.3. - 11g Technology Preview 1.</u:description>
     <u:bundle-url>http://pmd.sourceforge.net/pmd-jdeveloper1013-1.9.zip</u:bundle-url>
+    <u:requirements>
+      <u:requires-extension id="oracle.jdeveloper" minVersion="10.1.3.00" maxVersion="11.1.1.0.20.45" />        
+    </u:requirements>
+  </u:update>
+  <u:update id="net.sourceforge.pmd.jdeveloper">
+    <u:name>PMD JDeveloper Extension</u:name>
+    <u:version>1.9.0.0.1</u:version>
+    <u:author>Torsten Kleiber</u:author>
+    <u:author-url>http://pmd.sourceforge.net</u:author-url>
+    <u:description>Provides integrated support for PMD 4.0 in JDeveloper 11g Technology Preview 2.</u:description>
+    <u:bundle-url>http://pmd.sourceforge.net/pmd-jdeveloper1111-1.9.0.0.1.zip</u:bundle-url>
+    <u:requirements>
+    <u:requires-extension id="oracle.jdeveloper" minVersion="11.1.1.0.20.46.84" maxVersion="11.1.1.0.20.46.84" />        
+    </u:requirements>
   </u:update>
 </updates>
